# Learning-OpenGL

./: CMakeLists.txt  main.cpp  notes.md
assets/: Common.cpp  IndexBuffer.h  Renderer.cpp  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
assets/shaders/: block.frag  block.vert  light.frag  light.vert  simple.frag  simple.vert
src/: Camera.cpp  Camera.h  Common.cpp  Common.h  EventHandler.cpp  EventHandler.h  IndexBuffer.cpp  Renderer.cpp  Renderer.h  Shaders.cpp  Shaders.h  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.cpp  window_hints.h
